--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
         <div class="div">
          <p>
-          <p> <a href="index.html"> Главная страница </a> </p> 
+          <p> <a href="index.html"> Главная </a> </p> 
           <p> <a href="quickrecipes.html"> Быстрые рецепты </a> </p>
           <p> <a href="sweets.html"> Сладости  </a> </p> 
           <p> <a href="maindishes.html"> Основные блюда  </a> </p> 
